# ktextaddons

./: .clang-format-ignore  .clang-tidy  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  README.md.license  REUSE.toml  cppcheck-suppressions.xml  metainfo.yaml  sanitizers.supp
autocorrection/: CMakeLists.txt  KFTextAutoCorrectionConfig.cmake.in
autocorrection/src/: CMakeLists.txt  Messages.sh  autocorrection.cpp  autocorrection.h  autocorrectionsettings.cpp  autocorrectionsettings.h  autocorrectionutils.cpp  autocorrectionutils.h  textautocorrection_private_export.h
textaddonswidgets/: CMakeLists.txt  KFTextAddonsWidgetsConfig.cmake.in  Messages.sh  lineeditcatchreturnkey.cpp  lineeditcatchreturnkey.h  opensavedfilefolderwidget.cpp  opensavedfilefolderwidget.h  richtextquicktextformat.cpp  richtextquicktextformat.h  selectspecialchardialog.cpp  selectspecialchardialog.h  slidecontainer.cpp  slidecontainer.h  textaddonswidgets-index.qdoc  textaddonswidgets.qdoc  textaddonswidgets.qdocconf  textaddonswidgets_private_export.h  textmessagewidget.cpp  textmessagewidget.h
textaddonswidgets/autotests/: CMakeLists.txt  richtextquicktextformattest.cpp  richtextquicktextformattest.h  slidecontainertest.cpp  slidecontainertest.h  textmessagewidgettest.cpp  textmessagewidgettest.h
textaddonswidgets/completionlineedit/: completionlineedit.cpp  completionlineedit.h  completionlistview.cpp  completionlistview.h
textaddonswidgets/misc/: executableutils.cpp  executableutils.h  openfilejob.cpp  openfilejob.h  savefileutils.cpp  savefileutils.h
textaddonswidgets/model/: sortfilterproxymodelbase.cpp  sortfilterproxymodelbase.h
textaddonswidgets/needupdateversion/: needupdatecheckexistingnewversionjob.cpp  needupdatecheckexistingnewversionjob.h  needupdateparsehtmljob.cpp  needupdateparsehtmljob.h  needupdateparsehtmlutil.cpp  needupdateparsehtmlutil.h  needupdateversionutils.cpp  needupdateversionutils.h  needupdateversionwidget.cpp  needupdateversionwidget.h
textaddonswidgets/plugins/: configurepluginstreewidgetdelegate.cpp  configurepluginstreewidgetdelegate.h  configurepluginswidget.cpp  configurepluginswidget.h  pluginutil.cpp  pluginutil.h
textaddonswidgets/quicksearchbar/: quicksearchbar.cpp  quicksearchbar.h  quicksearchbarwidget.cpp  quicksearchbarwidget.h  textautogeneratequicksearchbar.cpp  textautogeneratequicksearchbar.h
textaddonswidgets/tests/: CMakeLists.txt  slidecontainer_gui.cpp
textaddonswidgets/verifynewversion/: checknewversiondialog.cpp  checknewversiondialog.h  checknewversionwidget.cpp  checknewversionwidget.h  verifynewversionutils.cpp  verifynewversionutils.h  verifynewversionwidget.cpp  verifynewversionwidget.h
textaddonswidgets/whatsnew/: whatsnewcomboboxwidget.cpp  whatsnewcomboboxwidget.h  whatsnewdialog.cpp  whatsnewdialog.h  whatsnewinfo.cpp  whatsnewinfo.h  whatsnewmessagewidget.cpp  whatsnewmessagewidget.h  whatsnewtranslationsbase.cpp  whatsnewtranslationsbase.h  whatsnewwidget.cpp  whatsnewwidget.h
textaddonswidgets/whatsnewng/: whatsnewmessagengwidget.cpp  whatsnewmessagengwidget.h  whatsnewngdialog.cpp  whatsnewngdialog.h  whatsnewngutils.cpp  whatsnewngutils.h  whatsnewngwidget.cpp  whatsnewngwidget.h
textautogeneratetext/: CMakeLists.txt  KFTextAutoGenerateTextConfig.cmake.in  KFTextAutogenerateTextConfig.cmake.in  Messages.sh  config-textautogeneratetext.h.in  textautogenerateengineloader.cpp  textautogenerateengineloader.h  textautogenerateengineplugin.cpp  textautogenerateengineplugin.h  textautogeneratemanager.cpp  textautogeneratemanager.h  textautogeneratetext-index.qdoc  textautogeneratetext.qdoc  textautogeneratetext.qdocconf  textautogeneratetext_private_export.h  textautogeneratetextclient.cpp  textautogeneratetextclient.h  textautogeneratetextplugin.h
textautogeneratetextmcpprotocol/: CMakeLists.txt  Messages.sh
textcustomeditor/: CMakeLists.txt  KFTextCustomEditorConfig.cmake.in  Messages.sh  config-textcustomeditor.h.in  textcustomeditor-index.qdoc  textcustomeditor.qdoc  textcustomeditor.qdocconf  textcustomeditor_private_export.h
textedittexttospeech/: CMakeLists.txt  KFTextEditTextToSpeechConfig.cmake.in  Messages.sh  abstracttexttospeechconfiginterface.cpp  abstracttexttospeechconfiginterface.h  abstracttexttospeechinterface.cpp  abstracttexttospeechinterface.h  textedittexttospeech-index.qdoc  textedittexttospeech.qdoc  textedittexttospeech.qdocconf  textedittexttospeech_private_export.h  texttospeech.cpp  texttospeech.h  texttospeechactions.cpp  texttospeechactions.h  texttospeechconfigdialog.cpp  texttospeechconfigdialog.h  texttospeechconfiginterface.cpp  texttospeechconfiginterface.h  texttospeechconfigwidget.cpp  texttospeechconfigwidget.h  texttospeechcontainerwidget.cpp  texttospeechcontainerwidget.h  texttospeechinterface.cpp  texttospeechinterface.h  texttospeechlanguagecombobox.cpp  texttospeechlanguagecombobox.h  texttospeechsliderwidget.cpp  texttospeechsliderwidget.h  texttospeechutil.cpp  texttospeechutil.h  texttospeechvoicecombobox.cpp  texttospeechvoicecombobox.h  texttospeechwidget.cpp  texttospeechwidget.h
textemoticons/: CMakeLists.txt  KFTextEmoticonsConfig.cmake.in  Messages.sh
textgrammarcheck/: CMakeLists.txt  KF5TextGrammarCheckConfig.cmake.in  KFTextGrammarCheckConfig.cmake.in  Messages.sh  textgrammarcheck-index.qdoc  textgrammarcheck.qdoc  textgrammarcheck.qdocconf  textgrammarcheckprivate_export.h
textspeechtotext/: CMakeLists.txt  KFTextSpeechToTextConfig.cmake.in  Messages.sh  speechtotext_private_export.h  speechtotextclient.cpp  speechtotextclient.h  speechtotextplugin.cpp
texttranslator/: CMakeLists.txt  KFTextTranslatorConfig.cmake.in  Messages.sh  pimcommontexttranslator_private_export.h  texttranslator-index.qdoc  texttranslator.qdoc  texttranslator.qdocconf  texttranslator_private_export.h
textutils/: CMakeLists.txt  KFTextUtilsConfig.cmake.in  converttext.cpp  converttext.h  textutils-index.qdoc  textutils.qdoc  textutils.qdocconf
(+3601 files in other folders)
